Refactor core package to index package and update related imports
