# build/swagger/swagger.json
@@ -100,7 +100,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/core.SearchResult"
+                                                "$ref": "#/definitions/index.SearchResult"
                                             }
                                         }
                                     }
@@ -217,22 +217,6 @@
                 }
             }
         },
-        "core.SearchResult": {
-            "type": "object",
-            "properties": {
-                "ID": {
-                    "type": "string",
-                    "example": "vec-001"
-                },
-                "Meta": {
-                    "type": "object"
-                },
-                "Score": {
-                    "type": "number",
-                    "example": 0.97
-                }
-            }
-        },
         "handlers.CreateVectorRequest": {
             "type": "object",
             "required": [
@@ -295,6 +279,22 @@
                     "items": {
                         "type": "number"
                     }
+                }
+            }
+        },
+        "index.SearchResult": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "string",
+                    "example": "vec-001"
+                },
+                "Meta": {
+                    "type": "object"
+                },
+                "Score": {
+                    "type": "number",
+                    "example": 0.97
                 }
             }
         },
